Corrected a typo on index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding-image">
         <h3>Design & Development</h3>
-        <p>I design and develop websites. I can make simple HTML & CSS Websites, an E-Commerce websites and web applicatons.</p>
+        <p>I design and develop websites. I can make simple HTML & CSS Websites, E-Commerce websites and Web applicatons.</p>
       </div>
       <div class="skill-row">
         <img class="social-media" src="images/social-media.png" alt="social-media-image">
