Changes to some page contents.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <div class="middle-container">
     <div class="profile">
       <img src="images/profile_pic.png" alt="profile picture">
-      <h2>Hello.</h2>
-      <p class="intro">I am a Fullstack Web Developer.</p>
+      <h2>Hello</h2>
+      <p class="intro">I am a Web Developer. I also provide digital marketing.</p>
     </div>
     <hr>
     <div class="skills">
-      <h2>My Skills.</h2>
+      <h2>My Skills</h2>
       <div class="skill-row">
         <img class="coding" src="images/coding.png" alt="coding-image">
         <h3>Design & Development</h3>
